# dicat

./: README.md
dicat/: .gitignore  Cargo.toml
dicat/src/: lib.rs  main.rs  operation.rs  prompt_parser.rs  utils.rs
dicat/test_files/: 1-009.dcm  1-012.dcm  1-014.dcm  1-015.dcm  1-016.dcm  1-017.dcm  1-018.dcm  1-019.dcm  1-020.dcm  1-021.dcm  1-022.dsdfsdf  not_dicom.txt
dicat/test_files/1.000000-Topogram  0.6  T20f-64071zxczxczxczxcsdfsdfs/: 1-1.dcm
dicat/test_small_dir/: 1-010.dcm  1-011.dcm  1-013.dcm
images/: 1.png:Zone.Identifier  2.png:Zone.Identifier  3.png:Zone.Identifier  4.png:Zone.Identifier  5.png:Zone.Identifier  6.png:Zone.Identifier
retinai_case_study/: Cargo.toml
retinai_case_study/src/: main.rs
