[package]
name = "dicat"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
async-walkdir = "2.0.0"
clap = { version = "4.5.13", features = ["derive"] }
dicom = "0.7.0"
futures = "0.3.30"
futures-lite = "2.3.0"
jwalk = "0.8.1"
prettytable = "0.10.0"
rand = "0.8.5"
rayon = "1.10.0"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
walkdir = "2.5.0"
